--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
+    "@typegoose/typegoose": "^7.6.1",
+    "mongoose": "^5.10.18",
+    "nestjs-typegoose": "^7.1.38",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
@@ -34,6 +38,7 @@
     "@nestjs/testing": "^7.6.15",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
