--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.6.15",
     "@typegoose/typegoose": "^7.6.1",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "mongoose": "^5.10.18",
     "nestjs-typegoose": "^7.1.38",
     "reflect-metadata": "^0.1.13",
@@ -36,9 +40,10 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
-    "@types/mongoose": "^5.11.97",
+    "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
